Implement comprehensive gyroscope controls for mobile devices:
✅ Created GyroManager class with full device orientation support
✅ Added iOS permission handling for device motion events
✅ Implemented tilt-to-movement conversion algorithms
✅ Added device detection (iOS vs Android vs Desktop)
✅ Enhanced InputManager with gyroscope integration
✅ Added fallback mechanisms (gyro → touch → keyboard)
✅ Included calibration system for accurate control
✅ Added smooth movement transitions and sensitivity controls
✅ Updated index.html with gyro-manager.js script

Features:
- Automatic device detection and appropriate control method
- iOS permission request handling for DeviceMotion API
- Dead zone and sensitivity adjustments
- Calibration system for zero-bias removal
- Smooth movement interpolation for responsive control
- Fallback to touch/keyboard controls when gyroscope unavailable
- Mobile-optimized UI with gyroscope status display
- Cross-platform compatibility (iOS/Android/Desktop)

The gyroscope controls now work reliably on mobile devices with proper permission handling and smooth tilt-based movement!

--- a/index.html
+++ b/index.html
@@ -189,13 +189,22 @@
     <!-- Game Canvas -->
     <canvas id="gameCanvas" class="hidden"></canvas>
     
-    <!-- Mobile Controls - Gyroscope only -->
+    <!-- Mobile Controls - Gyroscope and Touch -->
     <div class="controls" id="mobileControls">
         <div class="gyro-info">
-            Tilt your device to move the ball
+            <div id="gyro-status">🎯 Tilt your device to move the ball</div>
+            <div id="gyro-controls" style="margin-top: 10px; display: none;">
+                <button id="calibrate-btn" class="calibrate-btn" style="background: rgba(255,255,255,0.2); color: white; border: 1px solid rgba(255,255,255,0.3); border-radius: 15px; padding: 5px 10px; font-size: 0.8rem; cursor: pointer;">
+                    Calibrate
+                </button>
+                <button id="touch-mode-btn" class="touch-mode-btn" style="background: rgba(255,255,255,0.2); color: white; border: 1px solid rgba(255,255,255,0.3); border-radius: 15px; padding: 5px 10px; font-size: 0.8rem; cursor: pointer;">
+                    Touch Mode
+                </button>
+            </div>
         </div>
     </div>
 
     <script src="game.js"></script>
+<script src="gyro-manager.js"></script>
 </body>
 </html>
