--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
             display: block;
             width: 100vw;
             height: 100vh;
+            outline: none;
+            cursor: pointer;
         }
         
         .controls {
